css styles changes added

--- a/src/app/student/student-detail/student-detail.component.html
+++ b/src/app/student/student-detail/student-detail.component.html
@@ -17,5 +17,8 @@
       </tr>
       </tbody>
     </table>
+    <div class="button-container">
+      <button (click)="backToHome()">Back</button>
+    </div>
   </ng-container>
 </section>
